fixed import issue
fixed import issue

--- a/Week1/Practical1.ipynb
+++ b/Week1/Practical1.ipynb
@@ -33,9 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(sys.version)"
@@ -72,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here to write a command that stores the message as a variable called myString..."
+    "myString =('Hello, World!')"
    ]
   },
   {
@@ -105,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "help(print)"
+    "help(print('Hello World', sep=',', end='\\n', file=sys.stdout, flush=False))"
    ]
   },
   {
@@ -187,7 +195,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "2^89\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "myString[2] # get the 3rd character in myString"
+    "myString[-2] # get the 3rd character in myString"
    ]
   },
   {
@@ -282,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "myString[1:5]"
+    "sliced=myString[first:last]"
    ]
   },
   {
@@ -298,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "myString.find('W') # find the index of the character W in myString"
+    "myString.find('A') # find the index of the character W in myString"
    ]
   },
   {
@@ -362,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print() #insert the correct command inside the ()"
+    "print(fruits[2:-1][0]) #insert the correct command inside the ()"
    ]
   },
   {
@@ -458,7 +468,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ii in range(start, stop, step): # modify this to print out a list of numbers 10, 9, 8, ... 0.\n",
+    "for ii in range(0,11,2): # modify this to print out a list of numbers 10, 9, 8, ... 0.\n",
     "    print(ii)"
    ]
   },
@@ -483,7 +493,7 @@
    "source": [
     "topic = \"Geographic Information Systems\"\n",
     "print(topic.count(\"i\"))\n",
-    "print(topic.count(\"s\"))"
+    "print(topic.count(\"s\",\"S\"))"
    ]
   },
   {
@@ -560,8 +570,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "topic = 'Remote Sensing and Geographic Information Systems'\n",
-    "# something else goes here\n",
+    "topic='Remote Sensing and Geographic Information Systems'\n",
+    "print(topic.lower())\n",
     "print(topic.split('s'))"
    ]
   },
@@ -663,18 +673,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i love canada\n"
+     ]
+    }
+   ],
    "source": [
     "def special_split(string, sep): \n",
     "    # so the two parameters our function will use are string, \n",
     "    # the string to split, and sep, the character to split on.\n",
-    "    pass # replace this line with the body of your function\n",
+    "    topic= string\n",
+    "    sep=topic.split('a')\n",
+    "    my_split = special_split # replace this line with the body of your function\n",
+    "    print(my_split)\n",
     "\n",
-    "topic = 'Remote Sensing and Geographic Information Systems'\n",
-    "my_split = special_split(topic, 's')\n",
-    "print(my_split)"
+    "\n",
+    "print(my_split)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -690,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,12 +767,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 is smaller than 8\n"
+     ]
+    }
+   ],
    "source": [
     "def which_is_greater(x, y):\n",
-    "    pass # replace this line with your code"
+    "    if x > y:\n",
+    "        print('{0} is larger than {1}'.format(x,y))\n",
+    "    else:\n",
+    "        print('{0} is smaller than {1}'.format(x,y))\n",
+    "which_is_greater (4,8)\n",
+    "       \n",
+    "     # replace this line with your code"
    ]
   },
   {
@@ -761,9 +798,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "Blastoff!\n"
+     ]
+    }
+   ],
    "source": [
     "def countdown(n):\n",
     "    while n > 0:\n",
@@ -818,14 +868,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "10\n",
+      "\n",
+      "14\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "22\n",
+      "\n",
+      "26\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "34\n",
+      "\n",
+      "38\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "46\n",
+      "\n",
+      "50\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "58\n",
+      "\n",
+      "62\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "70\n",
+      "\n",
+      "74\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "82\n",
+      "\n",
+      "86\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "94\n",
+      "\n",
+      "98\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "106\n",
+      "\n",
+      "110\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "118\n"
+     ]
+    }
+   ],
    "source": [
     "def evenNoThreesorFours(n):\n",
     "    # given an integer n, prints values from 1 to n that are even, unless they are divisible by 3 or 4.\n",
     "    for x in range(1, n):\n",
-    "        pass # your code goes here"
+    "        if x % 3==0:\n",
+    "            print()\n",
+    "        elif x % 4==0:\n",
+    "            print()\n",
+    "        elif x % 2 ==0 :\n",
+    "            print (x)\n",
+    "            n-=1\n",
+    "evenNoThreesorFours(120)\n",
+    "        "
    ]
   },
   {
@@ -848,9 +992,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "math.pi is equal to: 3.141592653589793\n",
+      "pi is equal to:      3.141592653589793\n",
+      "math.floor(10.19) is equal to: 10\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'floor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_1264\\3225259531.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'math.floor(10.19) is equal to: {}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mh1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mh2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10.19\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'floor(10.19) is equal to:      {}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mh2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'floor' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "from math import pi\n",
@@ -899,12 +1064,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 122,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'geopandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_1264\\3904875841.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mgeopandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mgpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mglacier_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'C:/Users/dubuc/OneDrive/Documents/Phyton_EGM722/egm722/Week1/data_files/Glaciers.shp'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'geopandas'"
+     ]
+    }
+   ],
    "source": [
     "import geopandas as gpd\n",
-    "glacier_data = gpd.read_file('data_files/Glaciers.shp')"
+    "glacier_data = gpd.read_file('C:/Users/dubuc/OneDrive/Documents/Phyton_EGM722/egm722/Week1/data_files/Glaciers.shp')"
    ]
   },
   {
@@ -988,9 +1167,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'glacier_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_1264\\1005483960.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mglacier_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'glacier_data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(glacier_data.head())"
    ]
@@ -1097,9 +1288,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'geopandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_1264\\3547725871.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mgeopandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mgpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mshapely\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgeometry\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPoint\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'data_files/GPSPoints.txt'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'geopandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
@@ -1244,7 +1447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
