--- a/Week1/Practical1.ipynb
+++ b/Week1/Practical1.ipynb
@@ -1064,23 +1064,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'geopandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_1264\\3904875841.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mgeopandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mgpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mglacier_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'C:/Users/dubuc/OneDrive/Documents/Phyton_EGM722/egm722/Week1/data_files/Glaciers.shp'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'geopandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "glacier_data = gpd.read_file('C:/Users/dubuc/OneDrive/Documents/Phyton_EGM722/egm722/Week1/data_files/Glaciers.shp')"
@@ -1167,18 +1155,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'glacier_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_1264\\1005483960.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mglacier_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'glacier_data' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            RGIID         GLIMSID RGIFLAG   BGNDATE   ENDDATE   CENLON  \\\n",
+      "0  RGI40-08.01398  G006462E59966N     000  20030809  20060916  6.46207   \n",
+      "1  RGI40-08.01414  G006415E60121N     000  20030809  20060916  6.41519   \n",
+      "2  RGI40-08.01415  G006422E60101N     000  20030809  20060916  6.42158   \n",
+      "3  RGI40-08.01416  G006291E60040N     010  20030809  20060916  6.29127   \n",
+      "4  RGI40-08.01417  G006256E60024N     010  20030809  20060916  6.25622   \n",
+      "\n",
+      "    CENLAT  O1REGION  O2REGION   AREA  ZMIN  ZMAX  ZMED  SLOPE  ASPECT  LMAX  \\\n",
+      "0  59.9663         8         1  0.115  1239  1352  1296   23.5      90   224   \n",
+      "1  60.1211         8         1  0.176  1291  1385  1335   12.9       0   532   \n",
+      "2  60.1011         8         1  4.352  1173  1578  1473   12.3     315  2814   \n",
+      "3  60.0398         8         1  2.764  1114  1683  1483   13.4       0  2749   \n",
+      "4  60.0240         8         1  2.974  1049  1691  1498   14.2     315  2937   \n",
+      "\n",
+      "  GLACTYPE  NAME                                           geometry  \n",
+      "0     9099   NaN  POLYGON ((6.45968 59.96954, 6.45965 59.96929, ...  \n",
+      "1     9099   NaN  POLYGON ((6.41323 60.12366, 6.41318 60.12315, ...  \n",
+      "2     9099   NaN  POLYGON ((6.42682 60.11614, 6.42679 60.11589, ...  \n",
+      "3     9099   NaN  POLYGON ((6.30861 60.04641, 6.30862 60.04637, ...  \n",
+      "4     9099   NaN  POLYGON ((6.25752 60.03359, 6.25792 60.03346, ...  \n"
      ]
     }
    ],
@@ -1447,7 +1450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
